projects/kit/directives/connected/connected.style.less
@import '@taiga-ui/styles/utils';

[tuiConnected]:where(*&) {
    --t-image-size: 2.5rem;
    --t-connected-height: calc(100% - var(--t-image-size) - 0.5rem);

    > [tuiCell] {
        padding: 1rem;
    }

    &[tuiCardLarge] {
        &[data-space] [tuiCell] {
            padding: 1rem;
            margin: -1rem -1rem -0.5rem;

            &:last-of-type {
                margin-block-end: -1rem;
            }
        }
    }

    tui-accordion& {
        --t-image-size: 2rem;
    }

    > [tuiAccordion]::before,
    > [tuiCell]:not(:last-of-type)::before,
    > [tuiStep]:not(:last-of-type)::before {
        content: '';
        position: absolute;
        display: block;
        inset-block-start: calc(var(--t-image-size) + 0.25rem);
        inset-inline-start: calc(var(--t-image-size) / 2);
        block-size: var(--t-connected-height);
        inline-size: 1px;
        color: var(--tui-border-normal);
        background: linear-gradient(to bottom, currentColor 75%, transparent 75%) top center / 300% 300%;
        background-clip: content-box;
        padding: inherit;
    }

    > [tuiAccordion] {
        gap: 1rem;

        --t-margin: 0;

        &::before {
            inset-block-start: 0;
            inset-inline-start: calc(var(--t-image-size) / 2);
            block-size: 100%;
            margin: 0;
            background: var(--tui-border-normal);
            mask: linear-gradient(
                to top,
                black calc(50% - var(--t-image-size) / 2),
                transparent calc(50% - var(--t-image-size) / 2),
                transparent calc(50% + var(--t-image-size) / 2),
                black calc(50% + var(--t-image-size) / 2)
            );
        }

        &:first-of-type::before {
            mask: linear-gradient(
                to top,
                black calc(50% - var(--t-image-size) / 2),
                transparent calc(50% - var(--t-image-size) / 2)
            );
        }

        &:last-of-type::before {
            mask: linear-gradient(
                to bottom,
                black calc(50% - var(--t-image-size) / 2),
                transparent calc(50% - var(--t-image-size) / 2)
            );
        }
    }

    > tui-expand {
        > * {
            padding: 0;
            padding-inline-start: 3rem;
        }

        &:not(:last-child)::before {
            content: '';
            position: absolute;
            inset-block-start: 0;
            inset-inline-start: calc(var(--t-image-size) / 2);
            block-size: 100%;
            inline-size: 1px;
            background: var(--tui-border-normal);
        }
    }

    > [tuiStep] {
        --t-image-size: 2rem;
        --t-connected-height: calc(100% - var(--t-image-size));
    }
}

